Added footer layout and added testimonials to main page

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -26,9 +26,7 @@
                 </div>
             </div>
             <hr>
-            <div id="footer" class="span-24 last">
-                <p>Copyright 2011 <strong>Josh Berman</strong>, All Rights Reserved</p>
-            </div>
+            <%= render 'footer' %>
         </div>
     </body>
 </html>
