--- a/layouts/main.html
+++ b/layouts/main.html
@@ -25,10 +25,11 @@
                      <img src="/images/<%= @item[:image] %>" alt="<%= @item[:image_alt] %>" />
                 </div>
             </div>
-            <hr>
-            <div id="footer" class="span-24 last">
-                <p>Copyright 2011 <strong>Josh Berman</strong>, All Rights Reserved</p>
+            <div id="testimonials" class="span-24 last">
+                <%= @items.find { |i| i.identifier == '/testimonials/' }.compiled_content(:snapshot => :pre) %>
             </div>
+            <hr>
+            <%= render 'footer' %>
         </div>
     </body>
 </html>
