--- a/layouts/sidebar.html
+++ b/layouts/sidebar.html
@@ -8,13 +8,12 @@
         </ul>
     </div>
     <div id="temp_space_1" class="span-2 last"> </div>
-    <div id="contact" class="span-6">
+    <div id="contact" class="span-6 append-2 last">
         <strong>Contact:</strong>
         <ul>
             <li><a href="mailto: berma106@mail.chapman.edu">Email</a></li>
-            <li><a href="http://www.facebook.com/">Facebook</a></li>
-            <li><a href="http://www.twitter.com/">Twitter</a></li>
+            <li><a href="http://www.facebook.com/#!/profile.php?id=734248827">Facebook</a></li>
+            <li><a href="http://twitter.com/#!/Josh__Berman">Twitter</a></li>
         </ul>
     </div>
-    <div id="temp_space_2" class="span-2 last"> </div>
 </div>
